# personalpython

./: file-sorter-by-ext.py
text-analyzer/: pyproject.toml  test.txt
text-analyzer/root/: counter.py  format_data.py  main.py  normalize.py  parse_args.py  print_data.py  read_file.py  save.py  tokenize.py
text-analyzer/text_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
